--- a/athletics.html
+++ b/athletics.html
@@ -685,7 +685,7 @@
       <p class="footer-text">Walter Sisulu University Sports Hub</p>
       <p class="footer-text">Nelson Mandela Drive, Mthatha, Eastern Cape, South Africa</p>
       <p class="footer-text">Email: sports@wsu.ac.za | Phone: +27 47 502 2844</p>
-      <p class="footer-copyright">&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved.</p>
+      <p class="footer-copyright">&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved. <b>Designed By R Ntsanwisi</b></p>
     </div>
   </footer>
 
@@ -795,4 +795,5 @@
   </script>
 </body>
 </html>
+
 
