Adding "<b>Designed By R Ntsanwisi</b>" on the footer

--- a/contact.html
+++ b/contact.html
@@ -839,7 +839,7 @@
         <a href="http://www.youtube.com/@TheOfficialWSU" class="social-link"><i class="fab fa-youtube"></i></a>
       </div>
       
-      <p class="footer-copyright">&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved.</p>
+      <p class="footer-copyright">&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved. <b>Designed By R Ntsanwisi</b></p>
     </div>
   </footer>
 
@@ -934,6 +934,7 @@
   </script>
 </body>
 </html>
+
 
 
 
