Adding "<b>Designed By R Ntsanwisi</b>" on the footer

--- a/home.html
+++ b/home.html
@@ -863,7 +863,7 @@
       
       <div class="copyright">
         <p>&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved.</p>
-        <p>Developed to connect students with the Sports Department</p>
+        <p>Developed to connect students with the Sports Department. <b>Designed By R Ntsanwisi</b></p>
       </div>
     </div>
   </footer>
@@ -978,6 +978,7 @@
   </script>
 </body>
 </html>
+
 
 
 
